# yggdrasil-core-cpp

./: .gitignore  BuildLinux.sh  BuildLinux_Old.sh  BuildWindows_Clion.ps1  BuildWindows_VSCode.ps1  CMakeLists.txt  conanfile.txt  readme.md
src/: AppComponent.h  CMakeLists.txt  program.cpp
src/api/: CMakeLists.txt  api.h
